--- a/SuperScience/SuperScience/Disciplinas.storyboard
+++ b/SuperScience/SuperScience/Disciplinas.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -40,26 +41,25 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2f9-JD-9xt">
-                                                    <rect key="frame" x="8" y="14" width="128" height="128"/>
+                                                    <rect key="frame" x="-57" y="-11" width="180" height="180"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="128" id="bzX-Am-dXx"/>
-                                                        <constraint firstAttribute="height" constant="128" id="yhr-q3-aaS"/>
+                                                        <constraint firstAttribute="width" constant="180" id="uMs-xa-mfG"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H80-MI-hVQ">
-                                                    <rect key="frame" x="144" y="68" width="223" height="21"/>
+                                                    <rect key="frame" x="152" y="69" width="223" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="2f9-JD-9xt" firstAttribute="leading" secondItem="ixW-C3-qVu" secondAttribute="leading" constant="8" id="ECq-i2-aTJ"/>
-                                                <constraint firstAttribute="bottom" secondItem="2f9-JD-9xt" secondAttribute="bottom" constant="15.5" id="NcM-5x-mKp"/>
-                                                <constraint firstItem="2f9-JD-9xt" firstAttribute="top" secondItem="ixW-C3-qVu" secondAttribute="top" constant="14" id="SZf-4n-CZN"/>
-                                                <constraint firstItem="H80-MI-hVQ" firstAttribute="leading" secondItem="2f9-JD-9xt" secondAttribute="trailing" constant="8" id="YGQ-Ac-c8N"/>
-                                                <constraint firstItem="H80-MI-hVQ" firstAttribute="centerY" secondItem="2f9-JD-9xt" secondAttribute="centerY" id="eaW-ee-WNM"/>
-                                                <constraint firstAttribute="trailing" secondItem="H80-MI-hVQ" secondAttribute="trailing" constant="8" id="w0w-nv-9iw"/>
+                                                <constraint firstItem="2f9-JD-9xt" firstAttribute="centerY" secondItem="ixW-C3-qVu" secondAttribute="centerY" id="3iY-E6-brR"/>
+                                                <constraint firstItem="H80-MI-hVQ" firstAttribute="centerY" secondItem="2f9-JD-9xt" secondAttribute="centerY" id="F8P-iu-oNk"/>
+                                                <constraint firstItem="2f9-JD-9xt" firstAttribute="leading" secondItem="ixW-C3-qVu" secondAttribute="leadingMargin" constant="-65" id="bub-sr-Ue2"/>
+                                                <constraint firstAttribute="trailing" secondItem="H80-MI-hVQ" secondAttribute="trailing" id="kea-4W-xdU"/>
+                                                <constraint firstItem="2f9-JD-9xt" firstAttribute="top" secondItem="ixW-C3-qVu" secondAttribute="topMargin" constant="-19" id="rFG-Ci-FGP"/>
+                                                <constraint firstItem="H80-MI-hVQ" firstAttribute="leading" secondItem="2f9-JD-9xt" secondAttribute="trailing" constant="29" id="v9I-GX-SQc"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -93,7 +93,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="O0p-pt-iGj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="65" y="815"/>
+            <point key="canvasLocation" x="-18.399999999999999" y="107.49625187406298"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="ZPQ-at-ZgA">
@@ -107,8 +107,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Cda-tm-WOe">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Cda-tm-WOe">
+                                <rect key="frame" x="0.0" y="108" width="375" height="559"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="FRY-jE-q1Q">
                                     <size key="itemSize" width="163" height="189"/>
@@ -141,6 +141,14 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vDM-n0-Fch">
+                                <rect key="frame" x="0.0" y="64" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="Xoq-SS-EkJ" id="63k-yM-cY5"/>
+                                </connections>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -157,7 +165,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Max-eu-Uju" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="978" y="815"/>
+            <point key="canvasLocation" x="970" y="107"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="nXw-M5-uG7">
@@ -170,12 +178,57 @@
                     <view key="view" contentMode="scaleToFill" id="eQ7-gi-MIV">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QNn-mX-CnY">
+                                <rect key="frame" x="0.0" y="64" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="Xoq-SS-EkJ" id="ICx-dc-Gv9"/>
+                                </connections>
+                            </searchBar>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="byI-4X-ZJF">
+                                <rect key="frame" x="0.0" y="108" width="375" height="559"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="FiS-HW-SN7">
+                                    <size key="itemSize" width="163" height="189"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="collection_cell" id="BEc-G6-Xgs" customClass="MyCollectionViewCell" customModule="SuperScience" customModuleProvider="target">
+                                        <rect key="frame" x="10" y="10" width="163" height="189"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="163" height="189"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Cnw-Cx-tn2">
+                                                    <rect key="frame" x="0.0" y="0.0" width="163" height="189"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="Cnw-Cx-tn2" secondAttribute="trailing" id="CBf-gW-h52"/>
+                                            <constraint firstAttribute="bottom" secondItem="Cnw-Cx-tn2" secondAttribute="bottom" id="KrI-hx-C8n"/>
+                                            <constraint firstItem="Cnw-Cx-tn2" firstAttribute="top" secondItem="BEc-G6-Xgs" secondAttribute="top" id="MeE-Cx-GrF"/>
+                                            <constraint firstItem="Cnw-Cx-tn2" firstAttribute="leading" secondItem="BEc-G6-Xgs" secondAttribute="leading" id="wXE-Ni-Is1"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="myImageViewCell" destination="Cnw-Cx-tn2" id="3xI-t3-cQX"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MtS-Eo-eYd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1927" y="815"/>
+            <point key="canvasLocation" x="1967" y="107"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="I9t-2Z-DcT">
@@ -193,7 +246,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eO6-Zf-HG4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-962" y="815"/>
+            <point key="canvasLocation" x="-972" y="109"/>
         </scene>
     </scenes>
 </document>
